@@ -9,26 +9,28 @@ import com.intellij.openapi.diagnostic.Logger;
 import com.intellij.openapi.progress.ProcessCanceledException;
 import com.intellij.openapi.progress.ProgressIndicator;
 import com.intellij.openapi.progress.ProgressManager;
-import com.intellij.openapi.progress.impl.ProgressSuspender;
-import com.intellij.openapi.project.DumbModeProgressTitle;
-import com.intellij.openapi.project.FilesScanningTask;
-import com.intellij.openapi.project.Project;
-import com.intellij.openapi.project.UnindexedFilesScannerExecutor;
+import com.intellij.openapi.progress.Task;
+import com.intellij.openapi.progress.util.ProgressIndicatorUtils;
+import com.intellij.openapi.project.*;
 import com.intellij.openapi.roots.ContentIterator;
 import com.intellij.openapi.roots.impl.PushedFilePropertiesUpdater;
 import com.intellij.openapi.roots.impl.PushedFilePropertiesUpdaterImpl;
 import com.intellij.openapi.util.Disposer;
 import com.intellij.openapi.util.Key;
 import com.intellij.openapi.util.Ref;
+import com.intellij.openapi.util.UserDataHolderEx;
+import com.intellij.openapi.util.registry.Registry;
 import com.intellij.openapi.util.text.StringUtil;
 import com.intellij.openapi.vfs.VirtualFile;
 import com.intellij.testFramework.TestModeFlags;
-import com.intellij.util.BooleanFunction;
-import com.intellij.util.SystemProperties;
 import com.intellij.util.containers.ContainerUtil;
 import com.intellij.util.gist.GistManager;
 import com.intellij.util.gist.GistManagerImpl;
+import com.intellij.util.indexing.FilesScanningTaskBase.IndexingProgressReporter.IndexingSubTaskProgressReporter;
 import com.intellij.util.indexing.PerProjectIndexingQueue.PerProviderSink;
+import com.intellij.util.indexing.dependencies.FutureScanningRequestToken;
+import com.intellij.util.indexing.dependencies.ProjectIndexingDependenciesService;
+import com.intellij.util.indexing.dependencies.ScanningRequestToken;
 import com.intellij.util.indexing.dependenciesCache.DependenciesIndexedStatusService;
 import com.intellij.util.indexing.dependenciesCache.DependenciesIndexedStatusService.StatusMark;
 import com.intellij.util.indexing.diagnostic.*;
@@ -38,53 +40,84 @@ import com.intellij.util.indexing.roots.IndexableFilesDeduplicateFilter;
 import com.intellij.util.indexing.roots.IndexableFilesIterator;
 import com.intellij.util.indexing.roots.kind.IndexableSetOrigin;
 import com.intellij.util.indexing.roots.kind.SdkOrigin;
-import com.intellij.util.progress.ConcurrentTasksProgressManager;
-import com.intellij.util.progress.SubTaskProgressIndicator;
 import kotlin.Pair;
 import org.jetbrains.annotations.*;
 
 import java.time.Instant;
-import java.util.*;
+import java.util.ArrayList;
+import java.util.LinkedHashMap;
+import java.util.List;
+import java.util.Map;
+import java.util.concurrent.CountDownLatch;
+import java.util.concurrent.locks.LockSupport;
 import java.util.function.Function;
+import java.util.function.Predicate;
 import java.util.stream.Collectors;
 
 import static com.intellij.openapi.project.UnindexedFilesScannerExecutor.shouldScanInSmartMode;
 
 @ApiStatus.Internal
-public class UnindexedFilesScanner implements FilesScanningTask {
+public class UnindexedFilesScanner extends FilesScanningTaskBase {
   @VisibleForTesting
   public static final Key<Boolean> INDEX_PROJECT_WITH_MANY_UPDATERS_TEST_KEY = new Key<>("INDEX_PROJECT_WITH_MANY_UPDATERS_TEST_KEY");
 
-  static final Logger LOG = Logger.getInstance(UnindexedFilesScanner.class);  // only for test debugging purpose
+  static final Logger LOG = Logger.getInstance(UnindexedFilesScanner.class);
 
   public enum TestMode {
     PUSHING, PUSHING_AND_SCANNING
   }
 
+  private enum FirstScanningState {
+    REQUESTED, PERFORMED
+  }
+
   @SuppressWarnings("StaticNonFinalField") @VisibleForTesting
   public static volatile TestMode ourTestMode;
 
-  private static final @NotNull Key<Boolean> CONTENT_SCANNED = Key.create("CONTENT_SCANNED");
-  private static final @NotNull Key<Boolean> INDEX_UPDATE_IN_PROGRESS = Key.create("INDEX_UPDATE_IN_PROGRESS");
+  private static final Key<Boolean> CONTENT_SCANNED = Key.create("CONTENT_SCANNED");
+  private static final Key<Boolean> INDEX_UPDATE_IN_PROGRESS = Key.create("INDEX_UPDATE_IN_PROGRESS");
+  private static final Key<FirstScanningState> FIRST_SCANNING_REQUESTED = Key.create("FIRST_SCANNING_REQUESTED");
+
   private final FileBasedIndexImpl myIndex = (FileBasedIndexImpl)FileBasedIndex.getInstance();
-  protected final Project myProject;
+  private final Project myProject;
   private final boolean myStartSuspended;
   private final boolean myOnProjectOpen;
-  private final @NotNull @NonNls String myIndexingReason;
-  private final @NotNull ScanningType myScanningType;
+  private final String myIndexingReason;
+  private final ScanningType myScanningType;
   private final PushedFilePropertiesUpdater myPusher;
   private final @Nullable StatusMark myProvidedStatusMark;
   private final @Nullable List<IndexableFilesIterator> myPredefinedIndexableFilesIterators;
+  private final FutureScanningRequestToken myFutureScanningRequestToken;
   private boolean flushQueueAfterScanning = true;
 
+  @TestOnly
+  public UnindexedFilesScanner(@NotNull Project project) {
+    // If we haven't succeeded to fully scan the project content yet, then we must keep trying to run
+    // file-based index extensions for all project files until at least one of UnindexedFilesScanner-s finishes without cancellation.
+    // This is important, for example, for shared indexes: all files must be associated with their locally available shared index chunks.
+    this(project, false, false, null, null, null, ScanningType.FULL);
+  }
+
+  public UnindexedFilesScanner(@NotNull Project project, @Nullable String indexingReason) {
+    this(project, false, false, null, null, indexingReason, ScanningType.FULL);
+  }
+
+  public UnindexedFilesScanner(@NotNull Project project,
+                               @Nullable List<IndexableFilesIterator> predefinedIndexableFilesIterators,
+                               @Nullable DependenciesIndexedStatusService.StatusMark mark,
+                               @Nullable String indexingReason) {
+    this(project, false, false, predefinedIndexableFilesIterators, mark, indexingReason,
+         predefinedIndexableFilesIterators == null ? ScanningType.FULL : ScanningType.PARTIAL);
+  }
 
   public UnindexedFilesScanner(@NotNull Project project,
                                boolean startSuspended,
                                boolean onProjectOpen,
                                @Nullable List<IndexableFilesIterator> predefinedIndexableFilesIterators,
                                @Nullable StatusMark mark,
-                               @Nullable @NonNls String indexingReason,
+                               @Nullable String indexingReason,
                                @NotNull ScanningType scanningType) {
+    super(project);
     myProject = project;
     myStartSuspended = startSuspended;
     myOnProjectOpen = onProjectOpen;
@@ -94,6 +127,8 @@ public class UnindexedFilesScanner implements FilesScanningTask {
     myProvidedStatusMark = predefinedIndexableFilesIterators == null ? null : mark;
     myPredefinedIndexableFilesIterators = predefinedIndexableFilesIterators;
     LOG.assertTrue(myPredefinedIndexableFilesIterators == null || !myPredefinedIndexableFilesIterators.isEmpty());
+    LOG.assertTrue(!myOnProjectOpen || myPredefinedIndexableFilesIterators == null, "Should request full scanning on project open");
+    myFutureScanningRequestToken = project.getService(ProjectIndexingDependenciesService.class).newFutureScanningToken();
 
     if (isFullIndexUpdate()) {
       myProject.putUserData(CONTENT_SCANNED, null);
@@ -101,13 +136,14 @@ public class UnindexedFilesScanner implements FilesScanningTask {
   }
 
   @Override
-  public boolean isFullIndexUpdate() {
-    return myPredefinedIndexableFilesIterators == null;
+  protected boolean shouldHideProgressInSmartMode() {
+    return Registry.is("scanning.hide.progress.in.smart.mode", true) &&
+           myProject.getUserData(FIRST_SCANNING_REQUESTED) == FirstScanningState.REQUESTED;
   }
 
   @Override
-  public void dispose() {
-
+  public boolean isFullIndexUpdate() {
+    return myPredefinedIndexableFilesIterators == null;
   }
 
   @Override
@@ -139,8 +175,8 @@ public class UnindexedFilesScanner implements FilesScanningTask {
     );
   }
 
-  private static @Nullable List<IndexableFilesIterator> mergeIterators(@Nullable List<? extends IndexableFilesIterator> iterators,
-                                                                       @Nullable List<? extends IndexableFilesIterator> otherIterators) {
+  private static @Nullable List<IndexableFilesIterator> mergeIterators(@Nullable List<IndexableFilesIterator> iterators,
+                                                                       @Nullable List<IndexableFilesIterator> otherIterators) {
     if (iterators == null || otherIterators == null) return null;
     Map<IndexableSetOrigin, IndexableFilesIterator> uniqueIterators = new LinkedHashMap<>();
     for (IndexableFilesIterator iterator : iterators) {
@@ -152,25 +188,19 @@ public class UnindexedFilesScanner implements FilesScanningTask {
     return new ArrayList<>(uniqueIterators.values());
   }
 
-  public UnindexedFilesScanner(@NotNull Project project, @Nullable @NonNls String indexingReason) {
-    this(project, false, false, null, null, indexingReason, ScanningType.FULL);
-  }
-
-  private void scan(@NotNull PerformanceWatcher.Snapshot snapshot,
-                    @NotNull ProjectIndexingHistoryImpl projectIndexingHistory,
-                    @NotNull ProjectScanningHistoryImpl scanningHistory,
-                    @NotNull ProgressIndicator indicator,
-                    @NotNull Ref<? super StatusMark> markRef) {
-    markStage(projectIndexingHistory, ProjectIndexingHistoryImpl.Stage.PushProperties,
-              scanningHistory, ProjectScanningHistoryImpl.ScanningStage.DelayedPushProperties, true);
+  private void scan(PerformanceWatcher.Snapshot snapshot,
+                    ProjectScanningHistoryImpl scanningHistory,
+                    CheckCancelOnlyProgressIndicator indicator,
+                    IndexingProgressReporter progressReporter,
+                    Ref<StatusMark> markRef) {
+    markStage(scanningHistory, ProjectScanningHistoryImpl.Stage.DelayedPushProperties, true);
     try {
       if (myPusher instanceof PushedFilePropertiesUpdaterImpl) {
         ((PushedFilePropertiesUpdaterImpl)myPusher).performDelayedPushTasks();
       }
     }
     finally {
-      markStage(projectIndexingHistory, ProjectIndexingHistoryImpl.Stage.PushProperties,
-                scanningHistory, ProjectScanningHistoryImpl.ScanningStage.DelayedPushProperties, false);
+      markStage(scanningHistory, ProjectScanningHistoryImpl.Stage.DelayedPushProperties, false);
     }
     LOG.info(snapshot.getLogResponsivenessSinceCreationMessage("Performing delayed pushing properties tasks for " + myProject.getName()));
 
@@ -181,8 +211,7 @@ public class UnindexedFilesScanner implements FilesScanningTask {
     }
 
     List<IndexableFilesIterator> orderedProviders;
-    markStage(projectIndexingHistory, ProjectIndexingHistoryImpl.Stage.CreatingIterators,
-              scanningHistory, ProjectScanningHistoryImpl.ScanningStage.CreatingIterators, true);
+    markStage(scanningHistory, ProjectScanningHistoryImpl.Stage.CreatingIterators, true);
     try {
       if (myPredefinedIndexableFilesIterators == null) {
         Pair<@NotNull List<IndexableFilesIterator>, @NotNull StatusMark> pair = collectProviders(myProject, myIndex);
@@ -194,85 +223,77 @@ public class UnindexedFilesScanner implements FilesScanningTask {
       }
     }
     finally {
-      markStage(projectIndexingHistory, ProjectIndexingHistoryImpl.Stage.CreatingIterators,
-                scanningHistory, ProjectScanningHistoryImpl.ScanningStage.CreatingIterators, false);
+      markStage(scanningHistory, ProjectScanningHistoryImpl.Stage.CreatingIterators, false);
     }
 
-    markStage(projectIndexingHistory, ProjectIndexingHistoryImpl.Stage.Scanning,
-              scanningHistory, ProjectScanningHistoryImpl.ScanningStage.CollectingIndexableFiles, true);
+    markStage(scanningHistory, ProjectScanningHistoryImpl.Stage.CollectingIndexableFiles, true);
     try {
-      collectIndexableFilesConcurrently(myProject, indicator, orderedProviders, projectIndexingHistory, scanningHistory);
+      collectIndexableFilesConcurrently(myProject, indicator, progressReporter, orderedProviders, scanningHistory);
       if (isFullIndexUpdate()) {
         myProject.putUserData(CONTENT_SCANNED, true);
       }
     }
     finally {
-      markStage(projectIndexingHistory, ProjectIndexingHistoryImpl.Stage.Scanning,
-                scanningHistory, ProjectScanningHistoryImpl.ScanningStage.CollectingIndexableFiles, false);
+      markStage(scanningHistory, ProjectScanningHistoryImpl.Stage.CollectingIndexableFiles, false);
     }
-    String scanningCompletedMessage = getLogScanningCompletedStageMessage(projectIndexingHistory);
+    String scanningCompletedMessage = getLogScanningCompletedStageMessage(scanningHistory);
     LOG.info(snapshot.getLogResponsivenessSinceCreationMessage(scanningCompletedMessage));
   }
 
-  private static void markStage(@NotNull ProjectIndexingHistoryImpl projectIndexingHistory,
-                                @NotNull ProjectIndexingHistoryImpl.Stage stage,
-                                @NotNull ProjectScanningHistoryImpl scanningHistory,
-                                @NotNull ProjectScanningHistoryImpl.ScanningStage scanningStage,
-                                boolean isStart) {
+  private static void markStage(ProjectScanningHistoryImpl scanningHistory, ProjectScanningHistoryImpl.Stage scanningStage, boolean isStart) {
     ProgressManager.checkCanceled();
     Instant scanningStageTime = Instant.now();
     if (isStart) {
-      projectIndexingHistory.startStage(stage, scanningStageTime);
       scanningHistory.startStage(scanningStage, scanningStageTime);
     }
     else {
-      projectIndexingHistory.stopStage(stage, scanningStageTime);
       scanningHistory.stopStage(scanningStage, scanningStageTime);
     }
     ProgressManager.checkCanceled();
   }
 
-  private void scanAndUpdateUnindexedFiles(@NotNull ProjectIndexingHistoryImpl projectIndexingHistory,
-                                           @NotNull ProjectScanningHistoryImpl scanningHistory,
-                                           @NotNull ProgressIndicator indicator,
-                                           @NotNull Ref<? super StatusMark> markRef) {
-    if (!IndexInfrastructure.hasIndices()) {
-      return;
+  private void scanAndUpdateUnindexedFiles(@NotNull ProjectScanningHistoryImpl scanningHistory,
+                                           @NotNull CheckCancelOnlyProgressIndicator indicator,
+                                           @NotNull IndexingProgressReporter progressReporter,
+                                           @NotNull Ref<StatusMark> markRef) {
+    try {
+      if (!IndexInfrastructure.hasIndices()) {
+        return;
+      }
+      scanUnindexedFiles(scanningHistory, indicator, progressReporter, markRef);
     }
+    finally {
+      // Scanning may throw exception (or error).
+      // In this case, we should either clear or flush the indexing queue; otherwise, dumb mode will not end in the project.
+      if (flushQueueAfterScanning) {
+        flushPerProjectIndexingQueue(scanningHistory.getScanningReason(), indicator);
+      }
+
+      ((UserDataHolderEx)myProject).replace(FIRST_SCANNING_REQUESTED, FirstScanningState.REQUESTED, FirstScanningState.PERFORMED);
+    }
+  }
+
+  private void scanUnindexedFiles(@NotNull ProjectScanningHistoryImpl scanningHistory,
+                                  @NotNull CheckCancelOnlyProgressIndicator indicator,
+                                  @NotNull IndexingProgressReporter progressReporter,
+                                  @NotNull Ref<StatusMark> markRef) {
     LOG.info("Started scanning for indexing of " + myProject.getName() + ". Reason: " + myIndexingReason);
 
-    ProgressSuspender suspender = ProgressSuspender.getSuspender(indicator);
-    if (suspender != null) {
-      ApplicationManager.getApplication().getMessageBus().connect(this)
-        .subscribe(ProgressSuspender.TOPIC, new ProgressSuspender.SuspenderListener() {
-          @Override
-          public void suspendedStatusChanged(@NotNull ProgressSuspender changedSuspender) {
-            if (suspender == changedSuspender) {
-              Instant now = Instant.now();
-              if (suspender.isSuspended()) {
-                projectIndexingHistory.suspendStages(now);
-                scanningHistory.suspendStages(now);
-              }
-              else {
-                projectIndexingHistory.stopSuspendingStages(now);
-                scanningHistory.stopSuspendingStages(now);
-              }
-            }
-          }
-        });
-    }
+    indicator.onPausedStateChanged(paused -> {
+      if (paused) {
+        scanningHistory.suspendStages(Instant.now());
+      }
+      else {
+        scanningHistory.stopSuspendingStages(Instant.now());
+      }
+    });
 
     if (myStartSuspended) {
-      if (suspender == null) {
-        throw new IllegalStateException("Indexing progress indicator must be suspendable!");
-      }
-      if (!suspender.isSuspended()) {
-        suspender.suspendProcess(IndexingBundle.message("progress.indexing.started.as.suspended"));
-      }
+      freezeUntilAllowed();
     }
 
-    indicator.setIndeterminate(true);
-    indicator.setText(IndexingBundle.message("progress.indexing.scanning"));
+    progressReporter.setIndeterminate(true);
+    progressReporter.setText(IndexingBundle.message("progress.indexing.scanning"));
 
     PerformanceWatcher.Snapshot snapshot = PerformanceWatcher.takeSnapshot();
     Disposable scanningLifetime = Disposer.newDisposable();
@@ -281,46 +302,58 @@ public class UnindexedFilesScanner implements FilesScanningTask {
         DumbModeProgressTitle.getInstance(myProject)
           .attachProgressTitleText(IndexingBundle.message("progress.indexing.scanning.title"), scanningLifetime);
       }
-      scan(snapshot, projectIndexingHistory, scanningHistory, indicator, markRef);
+      scan(snapshot, scanningHistory, indicator, progressReporter, markRef);
     }
     finally {
       Disposer.dispose(scanningLifetime);
     }
 
-    boolean skipInitialRefresh = skipInitialRefresh();
-    boolean isUnitTestMode = ApplicationManager.getApplication().isUnitTestMode();
-    if (myOnProjectOpen && !isUnitTestMode && !skipInitialRefresh) {
-      // the full VFS refresh makes sense only after it's loaded, i.e. after scanning files to index is finished
-      InitialRefreshKt.scheduleInitialVfsRefresh(myProject, LOG);
-    }
-
-    if (flushQueueAfterScanning) {
-      flushPerProjectIndexingQueue(projectIndexingHistory, indicator);
+    if (isFullIndexUpdate()) {
+      // the full VFS refresh makes sense only after it's loaded, i.e., after scanning files to index is finished
+      myProject.getService(InitialVfsRefreshService.class).scheduleInitialVfsRefresh();
     }
   }
 
-  private void flushPerProjectIndexingQueue(@NotNull ProjectIndexingHistoryImpl projectIndexingHistory, @NotNull ProgressIndicator indicator) {
+  private void freezeUntilAllowed() {
+    CountDownLatch latch = new CountDownLatch(1);
+    ProgressManager.getInstance().run(
+      new Task.Backgroundable(myProject, IndexingBundle.message("progress.indexing.started.as.suspended"), true) {
+        @Override
+        public void run(@NotNull ProgressIndicator indicator1) {
+          try {
+            //noinspection InfiniteLoopStatement
+            while (true) {
+              LockSupport.parkNanos(100_000);
+              ProgressManager.checkCanceled();
+            }
+          }
+          finally {
+            latch.countDown();
+          }
+        }
+      }
+    );
+    ProgressIndicatorUtils.awaitWithCheckCanceled(latch);
+  }
+
+  private void flushPerProjectIndexingQueue(@Nullable String indexingReason, CheckCancelOnlyProgressIndicator indicator) {
+    var service = myProject.getService(PerProjectIndexingQueue.class);
     if (shouldScanInSmartMode()) {
       // Switch to dumb mode and index
-      myProject.getService(PerProjectIndexingQueue.class).flushNow(myIndexingReason);
+      service.flushNow(myIndexingReason);
     }
     else {
       // Already in dumb mode. Just invoke indexer
-      myProject.getService(PerProjectIndexingQueue.class).flushNowSync(projectIndexingHistory, indicator);
+      service.flushNowSync(indexingReason, indicator.originalIndicatorOnlyToFlushIndexingQueueSynchronously());
     }
   }
 
-  private static @NotNull String getLogScanningCompletedStageMessage(@NotNull ProjectIndexingHistoryImpl projectIndexingHistory) {
-    List<JsonScanningStatistics> statistics = projectIndexingHistory.getScanningStatistics();
+  private static String getLogScanningCompletedStageMessage(ProjectScanningHistory scanningHistory) {
+    var statistics = scanningHistory.getScanningStatistics();
     int numberOfScannedFiles = statistics.stream().mapToInt(JsonScanningStatistics::getNumberOfScannedFiles).sum();
     int numberOfFilesForIndexing = statistics.stream().mapToInt(JsonScanningStatistics::getNumberOfFilesForIndexing).sum();
-    return "Scanning completed for " +
-           projectIndexingHistory.getProject().getName() +
-           ". Number of scanned files: " +
-           numberOfScannedFiles +
-           "; " +
-           "Number of files for indexing: " +
-           numberOfFilesForIndexing;
+    return "Scanning completed for " + scanningHistory.getProject().getName() + '.' +
+           " Number of scanned files: " + numberOfScannedFiles + "; number of files for indexing: " + numberOfFilesForIndexing;
   }
 
   public static boolean isIndexUpdateInProgress(@NotNull Project project) {
@@ -331,9 +364,11 @@ public class UnindexedFilesScanner implements FilesScanningTask {
     return Boolean.TRUE.equals(project.getUserData(CONTENT_SCANNED));
   }
 
-  @NotNull
-  private static Pair<@NotNull List<IndexableFilesIterator>, @Nullable StatusMark> collectProviders(@NotNull Project project,
-                                                                                                    FileBasedIndexImpl index) {
+  public static boolean isFirstProjectScanningRequested(@NotNull Project project) {
+    return project.getUserData(FIRST_SCANNING_REQUESTED) != null;
+  }
+
+  private static Pair<List<IndexableFilesIterator>, @Nullable StatusMark> collectProviders(Project project, FileBasedIndexImpl index) {
     boolean cache = DependenciesIndexedStatusService.shouldBeUsed();
     List<IndexableFilesIterator> originalOrderedProviders;
     StatusMark mark = null;
@@ -361,37 +396,40 @@ public class UnindexedFilesScanner implements FilesScanningTask {
     return new Pair<>(orderedProviders, mark);
   }
 
-  protected @Nullable BooleanFunction<IndexedFile> getForceReindexingTrigger() {
+  protected @Nullable Predicate<IndexedFile> getForceReindexingTrigger() {
     return null;
   }
 
-  private void collectIndexableFilesConcurrently(
-    @NotNull Project project,
-    @NotNull ProgressIndicator indicator,
-    @NotNull List<? extends IndexableFilesIterator> providers,
-    @NotNull ProjectIndexingHistoryImpl projectIndexingHistory,
-    @NotNull ProjectScanningHistoryImpl projectScanningHistory) {
+  private void collectIndexableFilesConcurrently(@NotNull Project project,
+                                                 @NotNull CheckCancelOnlyProgressIndicator indicator,
+                                                 @NotNull IndexingProgressReporter progressReporter,
+                                                 @NotNull List<IndexableFilesIterator> providers,
+                                                 @NotNull ProjectScanningHistoryImpl projectScanningHistory) {
     if (providers.isEmpty()) {
       return;
     }
-    List<IndexableFileScanner.ScanSession> sessions =
+    ProjectIndexingDependenciesService projectIndexingDependenciesService = myProject.getService(ProjectIndexingDependenciesService.class);
+    final ScanningRequestToken scanningRequest = myOnProjectOpen ?
+                                                 projectIndexingDependenciesService.newScanningTokenOnProjectOpen() :
+                                                 projectIndexingDependenciesService.newScanningToken();
+    myFutureScanningRequestToken.markSuccessful();
+    projectIndexingDependenciesService.completeToken(myFutureScanningRequestToken);
+
+    List<IndexableFileScanner.@NotNull ScanSession> sessions =
       ContainerUtil.map(IndexableFileScanner.EP_NAME.getExtensionList(), scanner -> scanner.startSession(project));
 
     IndexableFilesDeduplicateFilter indexableFilesDeduplicateFilter = IndexableFilesDeduplicateFilter.create();
 
-    indicator.setText(IndexingBundle.message("progress.indexing.scanning"));
-    indicator.setIndeterminate(false);
-    indicator.setFraction(0);
+    progressReporter.setText(IndexingBundle.message("progress.indexing.scanning"));
+    progressReporter.setSubTasksCount(providers.size());
 
-    ConcurrentTasksProgressManager concurrentTasksProgressManager = new ConcurrentTasksProgressManager(indicator, providers.size());
-
-    // Workaround for concurrent modification of the [projectIndexingHistory].
-    // PushedFilePropertiesUpdaterImpl.invokeConcurrentlyIfPossible may finish earlier than all its spawned tasks have completed.
-    // And some scanning statistics may be tried to be added to the [projectIndexingHistory],
+    // Workaround for concurrent modification of the [scanningHistory].
+    // PushedFilePropertiesUpdaterImpl.invokeConcurrentlyIfPossible may finish earlier than some of its spawned tasks.
+    // And some scanning statistics may be tried to be added to the [scanningHistory],
     // leading to ConcurrentModificationException in the statistics' processor.
     Ref<Boolean> allTasksFinished = Ref.create(false);
+    IndexingReasonExplanationLogger sharedExplanationLogger = new IndexingReasonExplanationLogger();
     List<Runnable> tasks = ContainerUtil.map(providers, provider -> {
-      SubTaskProgressIndicator subTaskIndicator = concurrentTasksProgressManager.createSubTaskIndicator(1);
       ScanningStatistics scanningStatistics = new ScanningStatistics(provider.getDebugName());
       scanningStatistics.setProviderRoots(provider, project);
       IndexableSetOrigin origin = provider.getOrigin();
@@ -404,35 +442,66 @@ public class UnindexedFilesScanner implements FilesScanningTask {
       ProgressManager.checkCanceled(); // give a chance to suspend indexing
 
       return () -> {
-        subTaskIndicator.setText(provider.getRootsScanningProgressText());
-        try (PerProviderSink perProviderSink = project.getService(PerProjectIndexingQueue.class)
-          .getSink(provider, projectScanningHistory.getScanningSessionId())) {
+        long providerScanningStartTime = System.nanoTime();
+        try (
+          PerProviderSink perProviderSink = project.getService(PerProjectIndexingQueue.class)
+            .getSink(provider, projectScanningHistory.getScanningSessionId());
+          IndexingSubTaskProgressReporter subTaskReporter = progressReporter.getSubTaskReporter()
+        ) {
+          subTaskReporter.setText(provider.getRootsScanningProgressText());
+          List<Pair<VirtualFile, List<VirtualFile>>> rootsAndFiles = new ArrayList<>();
           Function<@Nullable VirtualFile, ContentIterator> singleProviderIteratorFactory = root -> {
-            UnindexedFilesFinder finder = new UnindexedFilesFinder(project, myIndex, getForceReindexingTrigger(), root);
-            return new SingleProviderIterator(project, subTaskIndicator, provider, fileScannerVisitors,
-                                              finder, scanningStatistics, perProviderSink);
+            List<VirtualFile> files = new ArrayList<>(1024);
+            rootsAndFiles.add(new Pair<>(root, files));
+            return fileOrDir -> {
+              // we apply scanners here, because scanners may mark directory as excluded, and we should skip excluded subtrees
+              // (e.g., JSDetectingProjectFileScanner.startSession will exclude "node_modules" directories during scanning)
+              PushedFilePropertiesUpdaterImpl.applyScannersToFile(fileOrDir, fileScannerVisitors);
+              return files.add(fileOrDir);
+            };
           };
+
+          scanningStatistics.startVfsIterationAndScanningApplication();
           provider.iterateFilesInRoots(project, singleProviderIteratorFactory, thisProviderDeduplicateFilter);
+          scanningStatistics.tryFinishVfsIterationAndScanningApplication();
+
+          scanningStatistics.startFileChecking();
+          for (Pair<VirtualFile, List<VirtualFile>> rootAndFiles : rootsAndFiles) {
+            UnindexedFilesFinder finder = new UnindexedFilesFinder(project, sharedExplanationLogger, myIndex, getForceReindexingTrigger(),
+                                                                   rootAndFiles.getFirst(), scanningRequest);
+            var rootIterator = new SingleProviderIterator(project, indicator, provider, finder,
+                                                          scanningStatistics, perProviderSink);
+            if (!rootIterator.mayBeUsed()) {
+              LOG.warn("Iterator based on " + provider + " can't be used.");
+              continue;
+            }
+            rootAndFiles.getSecond().forEach(it -> rootIterator.processFile(it));
+          }
+          scanningStatistics.tryFinishFilesChecking();
+
           perProviderSink.commit();
         }
         catch (ProcessCanceledException pce) {
+          scanningRequest.markUnsuccessful();
           throw pce;
         }
         catch (Exception e) {
+          scanningRequest.markUnsuccessful();
           // CollectingIterator should skip failing files by itself. But if provider.iterateFiles cannot iterate files and throws exception,
-          // we want to ignore whole origin and let other origins to complete normally.
+          // we want to ignore the whole origin and let other origins complete normally.
           LOG.error("Error while scanning files of " + provider.getDebugName() + "\n" +
                     "To reindex files under this origin IDEA has to be restarted", e);
         }
         finally {
+          scanningStatistics.tryFinishVfsIterationAndScanningApplication();
+          scanningStatistics.tryFinishFilesChecking();
+          scanningStatistics.setTotalOneThreadTimeWithPauses(System.nanoTime() - providerScanningStartTime);
           scanningStatistics.setNumberOfSkippedFiles(thisProviderDeduplicateFilter.getNumberOfSkippedFiles());
           synchronized (allTasksFinished) {
             if (!allTasksFinished.get()) {
-              projectIndexingHistory.addScanningStatistics(scanningStatistics);
               projectScanningHistory.addScanningStatistics(scanningStatistics);
             }
           }
-          subTaskIndicator.finished();
         }
       };
     });
@@ -443,37 +512,37 @@ public class UnindexedFilesScanner implements FilesScanningTask {
     finally {
       synchronized (allTasksFinished) {
         allTasksFinished.set(true);
+        projectIndexingDependenciesService.completeToken(scanningRequest);
       }
     }
   }
 
   @Override
-  public void perform(@NotNull ProgressIndicator indicator) {
+  public void perform(@NotNull CheckCancelOnlyProgressIndicator indicator, @NotNull IndexingProgressReporter progressReporter) {
     LOG.assertTrue(myProject.getUserData(INDEX_UPDATE_IN_PROGRESS) != Boolean.TRUE, "Scanning is already in progress");
     myProject.putUserData(INDEX_UPDATE_IN_PROGRESS, true);
     try {
-      performScanningAndIndexing(indicator);
-    } finally {
+      performScanningAndIndexing(indicator, progressReporter);
+    }
+    finally {
       myProject.putUserData(INDEX_UPDATE_IN_PROGRESS, false);
     }
   }
 
-  protected @NotNull ProjectIndexingHistoryImpl performScanningAndIndexing(@NotNull ProgressIndicator indicator) {
-    ProjectIndexingHistoryImpl projectIndexingHistory =
-      new ProjectIndexingHistoryImpl(myProject, myIndexingReason, myScanningType);
+  protected @NotNull ProjectScanningHistory performScanningAndIndexing(@NotNull CheckCancelOnlyProgressIndicator indicator,
+                                                                       @NotNull IndexingProgressReporter progressReporter) {
     ProjectScanningHistoryImpl scanningHistory = new ProjectScanningHistoryImpl(myProject, myIndexingReason, myScanningType);
     myIndex.loadIndexes();
     myIndex.filesUpdateStarted(myProject, isFullIndexUpdate());
-    IndexDiagnosticDumper.getInstance().onIndexingStarted(projectIndexingHistory);
+    IndexDiagnosticDumper.getInstance().onScanningStarted(scanningHistory);
     Ref<StatusMark> markRef = new Ref<>();
     try {
-      ProjectScanningHistoryImpl.Companion.startDumbModeBeginningTracking(myProject, scanningHistory, projectIndexingHistory);
-      ((GistManagerImpl)GistManager.getInstance()).
-        runWithMergingDependentCacheInvalidations(() -> scanAndUpdateUnindexedFiles(projectIndexingHistory, scanningHistory,
-                                                                                    indicator, markRef));
+      ProjectScanningHistoryImpl.Companion.startDumbModeBeginningTracking(myProject, scanningHistory);
+      ((GistManagerImpl)GistManager.getInstance()).runWithMergingDependentCacheInvalidations(() -> {
+        scanAndUpdateUnindexedFiles(scanningHistory, indicator, progressReporter, markRef);
+      });
     }
     catch (Throwable e) {
-      projectIndexingHistory.setWasInterrupted(true);
       scanningHistory.setWasInterrupted();
       if (e instanceof ControlFlowException) {
         LOG.info("Cancelled indexing of " + myProject.getName());
@@ -482,60 +551,76 @@ public class UnindexedFilesScanner implements FilesScanningTask {
     }
     finally {
       ProjectScanningHistoryImpl.Companion.finishDumbModeBeginningTracking(myProject);
-      myIndex.filesUpdateFinished(myProject);
-      projectIndexingHistory.finishTotalUpdatingTime();
       if (DependenciesIndexedStatusService.shouldBeUsed() && IndexInfrastructure.hasIndices()) {
         DependenciesIndexedStatusService.getInstance(myProject)
-          .indexingFinished(!projectIndexingHistory.getTimes().getWasInterrupted(), markRef.get());
+          .indexingFinished(!scanningHistory.getTimes().getWasInterrupted(), markRef.get());
       }
-      IndexDiagnosticDumper.getInstance().onIndexingFinished(projectIndexingHistory);
       IndexDiagnosticDumper.getInstance().onScanningFinished(scanningHistory);
     }
-    return projectIndexingHistory;
+    return scanningHistory;
   }
 
   @Override
   public String toString() {
-    String partialInfo = myPredefinedIndexableFilesIterators != null
-                         ? (", " + myPredefinedIndexableFilesIterators.size() + " iterators")
-                         : "";
+    var partialInfo = myPredefinedIndexableFilesIterators != null ? (", " + myPredefinedIndexableFilesIterators.size() + " iterators") : "";
     return "UnindexedFilesScanner[" + myProject.getName() + partialInfo + "]";
   }
 
-  private static boolean skipInitialRefresh() {
-    return SystemProperties.getBooleanProperty("ij.indexes.skip.initial.refresh", false);
-  }
-
-  public static void scanAndIndexProjectAfterOpen(@NotNull Project project,
-                                                  boolean startSuspended,
-                                                  @Nullable @NonNls String indexingReason) {
-    ((FileBasedIndexImpl)FileBasedIndex.getInstance()).loadIndexes();
+  public static void scanAndIndexProjectAfterOpen(@NotNull Project project, boolean startSuspended, @Nullable String indexingReason) {
+    FileBasedIndex.getInstance().loadIndexes();
+    ((UserDataHolderEx)project).putUserDataIfAbsent(FIRST_SCANNING_REQUESTED, FirstScanningState.REQUESTED);
     if (TestModeFlags.is(INDEX_PROJECT_WITH_MANY_UPDATERS_TEST_KEY)) {
       LOG.assertTrue(ApplicationManager.getApplication().isUnitTestMode());
       List<IndexableFilesIterator> iterators = collectProviders(project, (FileBasedIndexImpl)FileBasedIndex.getInstance()).getFirst();
       for (IndexableFilesIterator iterator : iterators) {
-        new UnindexedFilesScanner(project, startSuspended, true, Collections.singletonList(iterator), null, indexingReason,
-                                  ScanningType.FULL_ON_PROJECT_OPEN).queue(project);
+        new UnindexedFilesScanner(project, startSuspended, true, List.of(iterator), null, indexingReason, ScanningType.FULL_ON_PROJECT_OPEN)
+          .queue();
       }
       project.putUserData(CONTENT_SCANNED, true);
     }
     else {
-      new UnindexedFilesScanner(project, startSuspended, true, null, null, indexingReason, ScanningType.FULL_ON_PROJECT_OPEN).
-        queue(project);
+      new UnindexedFilesScanner(project, startSuspended, true, null, null, indexingReason, ScanningType.FULL_ON_PROJECT_OPEN)
+        .queue();
     }
   }
 
-  void queue(@NotNull Project project) {
-    project.getService(UnindexedFilesScannerExecutor.class).submitTask(this);
+  public void queue() {
+    // Delay scanning tasks until after all the scheduled dumb tasks are finished.
+    // For example, PythonLanguageLevelPusher.initExtra is invoked from RequiredForSmartModeActivity and may submit additional dumb tasks.
+    // We want scanning to start after all these "extra" dumb tasks are finished.
+    // Note that a project may become dumb/smart immediately after the check
+    // If a project becomes smart, in the worst case, we'll trigger additional short dumb mode.
+    // If a project becomes dumb, not a problem at all - we'll schedule a scanning task out of dumb mode either way.
+    if (DumbService.isDumb(myProject) && Registry.is("scanning.waits.for.non.dumb.mode", true)) {
+      new DumbModeTask() {
+        @Override
+        public void performInDumbMode(@NotNull ProgressIndicator indicator) {
+          UnindexedFilesScannerExecutor.getInstance(myProject).submitTask(UnindexedFilesScanner.this);
+        }
+      }.queue(myProject);
+    }
+    else {
+      UnindexedFilesScannerExecutor.getInstance(myProject).submitTask(this);
+    }
   }
 
-  @Nullable
-  List<IndexableFilesIterator> getPredefinedIndexableFilesIterators() {
+  @Override
+  public void dispose() {
+    if (!myProject.isDisposed()) {
+      ProjectIndexingDependenciesService serviceIfCreated = myProject.getServiceIfCreated(ProjectIndexingDependenciesService.class);
+      if (serviceIfCreated != null) {
+        serviceIfCreated.completeToken(myFutureScanningRequestToken);
+      }
+    }
+    super.dispose();
+  }
+
+  @Nullable List<IndexableFilesIterator> getPredefinedIndexableFilesIterators() {
     return myPredefinedIndexableFilesIterators;
   }
 
   @TestOnly
-  void setFlushQueueAfterScanning(boolean flushQueueAfterScanning) {
+  void setFlushQueueAfterScanning(@SuppressWarnings("SameParameterValue") boolean flushQueueAfterScanning) {
     this.flushQueueAfterScanning = flushQueueAfterScanning;
   }
 }
