@@ -1,7 +1,6 @@
-// Copyright 2000-2021 JetBrains s.r.o. and contributors. Use of this source code is governed by the Apache 2.0 license that can be found in the LICENSE file.
+// Copyright 2000-2023 JetBrains s.r.o. and contributors. Use of this source code is governed by the Apache 2.0 license.
 package com.intellij.updater;
 
-import java.util.Arrays;
 import java.util.List;
 
 public class ValidationResult implements Comparable<ValidationResult> {
@@ -10,62 +9,36 @@ public class ValidationResult implements Comparable<ValidationResult> {
   }
 
   public enum Action {
-    CREATE("Create"), UPDATE("Update"), DELETE("Delete"), VALIDATE("Validate");
-
-    private final String myDisplayString;
-
-    Action(String displayString) {
-      myDisplayString = displayString;
-    }
-
-    @Override
-    public String toString() {
-      return myDisplayString;
-    }
+    CREATE, UPDATE, DELETE, VALIDATE
   }
 
   public enum Option {
     NONE, IGNORE, KEEP, REPLACE, DELETE, KILL_PROCESS
   }
 
-  public static final String ABSENT_MESSAGE = "Absent";
-  public static final String MODIFIED_MESSAGE = "Modified";
-  public static final String ACCESS_DENIED_MESSAGE = "Access denied";
-  public static final String ALREADY_EXISTS_MESSAGE = "Already exists";
-
   public final Kind kind;
   public final String path;
   public final Action action;
-  public final String message;
+  public final @UpdaterUI.Message String message;
   public final String details;
   public final List<Option> options;
 
-  public ValidationResult(Kind kind, String path, Action action, String message, Option... options) {
+  public ValidationResult(Kind kind, String path, Action action, @UpdaterUI.Message String message, Option... options) {
     this(kind, path, action, message, "", options);
   }
 
-  public ValidationResult(Kind kind, String path, Action action, String message, String details, Option... options) {
+  public ValidationResult(Kind kind, String path, Action action, @UpdaterUI.Message String message, String details, Option... options) {
     this.kind = kind;
     this.path = path;
     this.action = action;
     this.message = message;
     this.details = details;
-    this.options = Arrays.asList(options);
+    this.options = List.of(options);
   }
 
   @Override
   public String toString() {
-    String prefix;
-    switch (kind) {
-      case CONFLICT:
-        prefix = "?";
-        break;
-      case ERROR:
-        prefix = "!";
-        break;
-      default:
-        prefix = "";
-    }
+    var prefix = kind == Kind.CONFLICT ? "?" : kind == Kind.ERROR ? "!" : "";
     return prefix + action + " " + path + ": " + message + " (" + options + ")";
   }
 
